--- a/.htaccess
+++ b/.htaccess
@@ -5,8 +5,8 @@ Options -Indexes
 RewriteEngine on
 RewriteRule ^index\.html$ / [NC,R,L]
 
-RewriteCond %{HTTP_HOST} ^naseemexchange\.com\.au$
-RewriteRule ^/?$ "http\:\/\/www.naseemexchange\.com\.au" [R=301,L]
+#RewriteCond %{HTTP_HOST} ^al-jalali\.com$
+#RewriteRule ^/?$ "http\:\/\/www.al-jalali\.com" [R=301,L]
 # if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
@@ -15,22 +15,17 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 RewriteRule . index.php
 
-<IfModule mod_expires.c>
-    ExpiresActive on
-    ExpiresDefault "access plus 10 days"
 
-    ExpiresByType text/css "access plus 1 week"
-    ExpiresByType text/plain "access plus 1 month"
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
     ExpiresByType image/gif "access plus 1 month"
     ExpiresByType image/png "access plus 1 month"
-    ExpiresByType image/jpeg "access plus 1 month"
-    ExpiresByType application/x-javascript "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 week"
-    ExpiresByType application/x-icon "access plus 1 year"
-    ExpiresByType image/jpg "access plus 1 month"
-    ExpiresByType image/svg+xml "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType text/x-javascript "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresDefault "access plus 2 days"
 </IfModule>
-
-<FilesMatch .*\.(zip|doc|docx|pdf|rar|apk)>
-Deny from all
-</FilesMatch>
